히어로 텍스트 작업 완료

--- a/viewer’splayground_moon.html
+++ b/viewer’splayground_moon.html
@@ -90,13 +90,181 @@
 
     <!-- 메인 -->
     <main>
+      <!-- 히어로 텍스트 -->
+      <section class="hero">
+        <ul
+        data-aos="fade-up"
+        data-aos-duration="400"
+        data-aos-easing="ease-in-out"
+        data-aos-mirror="true"
+        data-aos-once="false"
+        data-aos-anchor-placement="top-center"
+        >
+          <li>Create,</li>
+          <li>Share,</li>
+          <li>Vote,</li>
+          <li>Play with K-drama</li>
+        </ul>
+        <div class="imgbox"
+        data-aos="fade-up"
+        data-aos-duration="400"
+        data-aos-delay="300"
+        data-aos-easing="ease-in-out"
+        data-aos-mirror="true"
+        data-aos-once="false"
+        data-aos-anchor-placement="top-center">
+          <div class="smiling-emoji">
+      </div>
+      </section><!-- .hero -->
+
+
+      <!-- 공모전 수상자 -->
+      <section class="contest-winner">
+        <div class="top">
+          <div class="decoImg"></div>
+          <div class="title">
+            <h2>1st Video Contest Winners</h2>
+            <p>
+              Fans reimagined the iconic scenes of “The Glory”.
+              <br />
+              We celebrate the creativity and passion of our contest winners.
+            </p>
+          </div>
+        </div><!-- top -->
+        <div class="winner-wrap">
+          <div class="video-content">
+            <div class="video-wrap">
+              <iframe
+                src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
+                title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+              </iframe>
+              <div class="award-info">
+                <h3 class="award">Gold Award</h3>
+                <div class="txtbox">
+                  <ul class="subtitle">
+                    <li>
+                      <p>Title : Typo of Sorry</p>
+                    </li>
+                    <li>
+                      <p>Nickname : rainyroom</p>
+                    </li>
+                    <li>
+                      <em>Acceptance comment:
+                        <br />
+                        “I wanted to express how a single word, or even a typo, can hold deep
+                        emotions—regret, forgiveness, and pain. The drama The Glory inspired
+                        me to explore the power of unspoken apologies. Winning the Gold Award
+                        feels surreal, and I’m grateful to everyone who connected with my
+                        work. This moment reminds me that even small mistakes can lead to
+                        meaningful stories.”
+                      </em>
+                    </li>
+                  </ul>
+                </div><!-- .txtbox -->
+                <div class="gold"></div>
+              </div><!-- .award-info -->
+              <div class="circles">
+                <div class="blur-1"></div>
+                <div class="blur-2"></div>
+              </div>
+            </div><!-- .video-wrap -->
+          </div><!-- .video-content -->
+          <div class="video-content">
+            <div class="video-wrap">
+              <iframe
+                src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
+                title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+              </iframe>
+              <div class="award-info">
+                <h3 class="award">Silver Award</h3>
+                <div class="txtbox">
+                  <ul class="subtitle">
+                    <li>
+                      <p>Title : The Fire Inside</p>
+                    </li>
+                    <li>
+                      <p>Nickname : bloom</p>
+                    </li>
+                    <li>
+                      <em>Acceptance comment:
+                        <br />
+                        “I truly enjoyed watching The Glory, and many of its scenes stayed
+                        with me long after. I created this video inspired by the unspoken
+                        emotions behind every message sent—or left unsent. It’s an incredible
+                        honor to receive this award, and I’m thankful for the chance to share
+                        my interpretation. This experience motivates me to keep creating
+                        stories that connect with others.”
+                      </em>
+                    </li>
+                  </ul>
+                </div><!-- .txtbox -->
+                <div class="silver"></div>
+              </div><!-- .award-info -->
+              <div class="circles">
+                <div class="blur-1"></div>
+                <div class="blur-2"></div>
+              </div>
+            </div><!-- .video-wrap -->
+          </div><!-- video-content -->
+          <div class="video-content">
+            <div class="video-wrap">
+              <iframe
+                src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
+                title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+              </iframe>
+              <div class="award-info">
+                <h3 class="award">Popular Choice</h3>
+                <div class="txtbox">
+                  <ul class="subtitle">
+                    <li>
+                      <p>Title : Read Receipt, Unsent</p>
+                    </li>
+                    <li>
+                      <p>Nickname : mintlatte</p>
+                    </li>
+                    <li>
+                      <em>Acceptance comment:
+                        <br />
+                        “My goal was to win the Gold Award, but receiving the Popular Choice
+                        still feels deeply rewarding. This project took a lot of effort and
+                        late nights, so being recognized by viewers means a lot to me. It’s
+                        heartwarming to know that people connected with my work. I’ll remember
+                        this encouragement and keep challenging myself to do even better.”
+                      </em>
+                    </li>
+                  </ul>
+                </div><!-- .txtbox -->
+                <div class="popular"></div>
+              </div><!-- .award-info -->
+              <div class="circles">
+                <div class="blur-1"></div>
+                <div class="blur-2"></div>
+              </div>
+            </div><!-- video-wrap -->
+          </div><!-- video-content -->
+        </div><!-- .wrap -->
+      </section><!-- .contest-winner -->
+
       <!-- 진행중인 공모전 -->
       <section class="running-contest">
         <div class="title">
           <h2>Running Contest<h2>
         </div>
         <div class="con">
-          <div class="info">
+          <div class="info"
+          data-aos="zoom-in-up"
+        data-aos-duration="400"
+        data-aos-easing="ease-in-out"
+        data-aos-mirror="true"
+        data-aos-once="false"
+        data-aos-anchor-placement="top-center"
+          >
             <div class="deadline">
               <h4>
                 Deadline: 2025-11-10 23:59 UTC
@@ -139,138 +307,11 @@
             </article>
           </div><!-- .info -->
         </div><!-- .con -->
-      </section><!-- .running-contest -->
+      </section>
 
-      <!-- 공모전 수상자 -->
-      <section class="contest-winner">
-        <div class="top">
-          <div class="decoImg"></div>
-          <div class="title">
-            <h2>1st Video Contest Winners</h2>
-            <p>
-              Fans reimagined the iconic scenes of “The Glory”.
-              <br />
-              We celebrate the creativity and passion of our contest winners.
-            </p>
-          </div>
-        </div><!-- top -->
-        <div class="winner-wrap">
-          <div class="video-content-box">
-            <div class="video-wrap">
-              <iframe
-                src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
-                title="Gold Award | Title : Typo of Sorry | Nickname : rainyroom" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              <div class="award-info">
-                <h3 class="award">Gold Award</h3>
-                <div class="txtbox">
-                  <ul class="subtitle">
-                    <li>
-                      <p>Title : Typo of Sorry</p>
-                    </li>
-                    <li>
-                      <p>Nickname : rainyroom</p>
-                    </li>
-                    <li>
-                      <em>Acceptance comment:
-                        <br />
-                        “I wanted to express how a single word, or even a typo, can hold deep
-                        emotions—regret, forgiveness, and pain. The drama The Glory inspired
-                        me to explore the power of unspoken apologies. Winning the Gold Award
-                        feels surreal, and I’m grateful to everyone who connected with my
-                        work. This moment reminds me that even small mistakes can lead to
-                        meaningful stories.”
-                      </em>
-                    </li>
-                  </ul>
-                </div><!-- .txtbox -->
-              </div><!-- .award-info -->
-              <img class="gold" src="../StudioDragon/moon/asset/gold.png" />
-              <div class="circles">
-                <div class="blur-1"></div>
-                <div class="blur-2"></div>
-              </div>
-            </div><!-- .video-wrap -->
-          </div><!-- .video-content-box -->
-          <div class="video-content-box">
-            <div class="video-wrap">
-              <iframe
-                src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
-                title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              <div class="">
-                <h3 class="award">Silver Award</h3>
-                <div class="txtbox">
-                  <ul class="subtitle">
-                    <li>
-                      <p>Title : The Fire Inside</p>
-                    </li>
-                    <li>
-                      <p>Nickname : bloom</p>
-                    </li>
-                    <li>
-                      <em>Acceptance comment:
-                        <br />
-                        “I truly enjoyed watching The Glory, and many of its scenes stayed
-                        with me long after. I created this video inspired by the unspoken
-                        emotions behind every message sent—or left unsent. It’s an incredible
-                        honor to receive this award, and I’m thankful for the chance to share
-                        my interpretation. This experience motivates me to keep creating
-                        stories that connect with others.”
-                      </em>
-                    </li>
-                  </ul>
-                </div><!-- .txtbox -->
-              </div><!-- .award-info -->
-              <img class="silver" src="../StudioDragon/moon/asset/silver.png" />
-              <div class="circles">
-                <div class="blur-1"></div>
-                <div class="blur-2"></div>
-              </div>
-            </div><!-- .video-wrap -->
-          </div><!-- video-content-box -->
-          <div class="video-content-box">
-            <div class="video-wrap">
-              <iframe
-                src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
-                title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-              </iframe>
-              <div class="award-info">
-                <h3 class="award">Popular Choice</h3>
-                <div class="txtbox">
-                  <ul class="subtitle">
-                    <li>
-                      <p>Title : Read Receipt, Unsent</p>
-                    </li>
-                    <li>
-                      <p>Nickname : mintlatte</p>
-                    </li>
-                    <li>
-                      <em>Acceptance comment:
-                        <br />
-                        “My goal was to win the Gold Award, but receiving the Popular Choice
-                        still feels deeply rewarding. This project took a lot of effort and
-                        late nights, so being recognized by viewers means a lot to me. It’s
-                        heartwarming to know that people connected with my work. I’ll remember
-                        this encouragement and keep challenging myself to do even better.”
-                      </em>
-                    </li>
-                  </ul>
-                </div><!-- .txtbox -->
-              </div><!-- .award-info -->
-              <img class="popular" src="../StudioDragon/moon/asset/popular.png" />
-              <div class="circles">
-                <div class="blur-1"></div>
-                <div class="blur-2"></div>
-              </div>
-            </div><!-- video-wrap -->
-          </div><!-- video-content-box -->
-        </div><!-- .wrap -->
-      </section><!-- .contest-winner -->
+      <!-- 팬갤러리 -->
+      
+
     </main>
 
 
