인트로 디벨롭

--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -1203,7 +1203,8 @@
                             <div class="blet">Vision</div>
                             <div class="txt">
                                 <p>Connecting the World<br />Through Stories</p><em>We connect the world through the
-                                    boundless power of stories, building emotional bridges that transcend language and
+                                    boundless<br /> power of stories, building emotional bridges<br /> that transcend
+                                    language and
                                     culture.</em>
                             </div>
                         </div>
@@ -1211,7 +1212,7 @@
                             <div class="blet">mission</div>
                             <div class="txt">
                                 <p>Empowering<br />Creative Freedom</p><em>With limitless imagination and creative
-                                    excellence, we lead the global K-Drama universe and shape the future of
+                                    excellence,<br /> we lead the global K-Drama <br />universe and shape the future of
                                     storytelling.</em>
                             </div>
                         </div>
