--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -27,7 +27,7 @@
             <div class="header_bg">
             </div>
             <div class="inner">
-                <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="#" class="logo"><img src="../asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav>
                     <ul class="gnb">
                         <li class=""><a href="#">ABOUT</a>
@@ -74,7 +74,7 @@
                             <a href="#">KR</a>
                         </div><!-- //.lang -->
                         <div class="user">
-                            <a href="#"><img src="back/img/user.png" alt="user"></a>
+                            <a href="#"><img src="../asset/user.png" alt="user"></a>
                         </div><!-- //.user -->
                         <div class="ham">
                             <ul>
@@ -1220,70 +1220,67 @@
                 </div>
             </section>
         </main>
-        <footer>
-            <footer class="ver_dark ver_white">
-                <div class="footer_inner">
-                    <!-- Top Area -->
-                    <div class="footer_top">
-                        <div class="footer_menu">
-                            <div class="footer_gnb">
-                                <a href="#" class="footer_gnb_link home">Home</a>
-                                <div class="footer_gnb_wrap">
-                                    <ul class="footer_gnb_list">
-                                        <li><a href="#" class="footer_gnb_link">Hotline</a></li>
-                                        <li><a href="#" class="footer_gnb_link">Recruitment</a></li>
-                                        <li><a href="#" class="footer_gnb_link">Contact Us</a></li>
-                                        <li><a href="#" class="footer_gnb_link">Sitemap</a></li>
-                                    </ul><!-- //.footer_gnb_list -->
+        <footer class="ver_dark ver_white">
+            <div class="footer_inner">
+                <!-- Top Area -->
+                <div class="footer_top">
+                    <div class="footer_menu">
+                        <div class="footer_gnb">
+                            <a href="#" class="footer_gnb_link home">Home</a>
+                            <div class="footer_gnb_wrap">
+                                <ul class="footer_gnb_list">
+                                    <li><a href="#" class="footer_gnb_link">Hotline</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Recruitment</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Contact Us</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Sitemap</a></li>
+                                </ul><!-- //.footer_gnb_list -->
 
-                                    <div class="footer_family_site">
-                                        <ul class="family_site_list">
-                                            <li><a href="#" class="family_site_link">CJ ENM</a></li>
-                                            <li><a href="#" class="family_site_link">CJ GROUP</a></li>
-                                            <li class="family_site_btn_wrap">
-                                                <button type="button" class="family_site_btn">
-                                                    <span>Family Site</span>
-                                                    <img src="asset/up.svg" alt="arrow" class="family_site_arrow">
-                                                </button>
-                                            </li>
-                                        </ul><!-- //.family_site_list -->
-                                    </div><!-- //.footer_family_site -->
-                                </div><!-- //.footer_gnb_wrap -->
-                            </div><!-- //.footer_gnb -->
-                        </div><!-- //.footer_menu -->
-                    </div><!-- //.footer_top -->
+                                <div class="footer_family_site">
+                                    <ul class="family_site_list">
+                                        <li><a href="#" class="family_site_link">CJ ENM</a></li>
+                                        <li><a href="#" class="family_site_link">CJ GROUP</a></li>
+                                        <li class="family_site_btn_wrap">
+                                            <button type="button" class="family_site_btn">
+                                                <span>Family Site</span>
+                                                <img src="asset/up.svg" alt="arrow" class="family_site_arrow">
+                                            </button>
+                                        </li>
+                                    </ul><!-- //.family_site_list -->
+                                </div><!-- //.footer_family_site -->
+                            </div><!-- //.footer_gnb_wrap -->
+                        </div><!-- //.footer_gnb -->
+                    </div><!-- //.footer_menu -->
+                </div><!-- //.footer_top -->
 
-                    <!-- Bottom Area -->
-                    <div class="footer_bottom">
-                        <div class="footer_brand">
-                            <div class="footer_logo">
+                <!-- Bottom Area -->
+                <div class="footer_bottom">
+                    <div class="footer_brand">
+                        <div class="footer_logo">
 
-                            </div><!-- //.footer_logo -->
+                        </div><!-- //.footer_logo -->
 
-                            <div class="footer_sns">
-                                <a href="#" class="sns_link" aria-label="Facebook">
-                                    <img src="asset/facebook.svg" alt="Facebook">
-                                </a>
-                                <a href="#" class="sns_link" aria-label="YouTube">
-                                    <img src="asset/youtube.svg" alt="YouTube">
-                                </a>
-                                <a href="#" class="sns_link" aria-label="Instagram">
-                                    <img src="asset/Instagram.svg" alt="Instagram">
-                                </a>
-                            </div><!-- //.footer_sns -->
-                        </div><!-- //.footer_brand -->
+                        <div class="footer_sns">
+                            <a href="#" class="sns_link" aria-label="Facebook">
+                                <img src="asset/facebook.svg" alt="Facebook">
+                            </a>
+                            <a href="#" class="sns_link" aria-label="YouTube">
+                                <img src="asset/youtube.svg" alt="YouTube">
+                            </a>
+                            <a href="#" class="sns_link" aria-label="Instagram">
+                                <img src="asset/Instagram.svg" alt="Instagram">
+                            </a>
+                        </div><!-- //.footer_sns -->
+                    </div><!-- //.footer_brand -->
 
-                        <div class="footer_info">
-                            <p class="footer_info_text">CEO : Jang Kyung-ik</p>
-                            <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro,
-                                Mapo-gu, Seoul, Republic of Korea | Business registration number : 747-81-00388
-                            </p>
-                            <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
-                        </div><!-- //.footer_info -->
-                    </div><!-- //.footer_bottom -->
-                </div><!-- //.footer_inner -->
-            </footer><!-- //.footer -->
-        </footer>
+                    <div class="footer_info">
+                        <p class="footer_info_text">CEO : Jang Kyung-ik</p>
+                        <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu, Seoul,
+                            Republic of Korea | Business registration number : 747-81-00388</p>
+                        <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
+                    </div><!-- //.footer_info -->
+                </div><!-- //.footer_bottom -->
+            </div><!-- //.footer_inner -->
+        </footer><!-- //.footer -->
     </div>
 
 </body>
