인트로 조정

--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -1200,7 +1200,7 @@
                     <h3 class="tit">Vision & Mission</h3>
                     <div class="cont">
                         <div class="vision"><!-- 배경 이미지 삽입 -->
-                            <div class="blet">Vision</div>
+                            <!-- <div class="blet">Vision</div> -->
                             <div class="txt">
                                 <p>Connecting the World<br />Through Stories</p><em>We connect the world through the
                                     boundless<br /> power of stories, building emotional bridges<br /> that transcend
@@ -1209,7 +1209,7 @@
                             </div>
                         </div>
                         <div class="mission"><!-- 배경 이미지 삽입 -->
-                            <div class="blet">mission</div>
+                            <!-- <div class="blet">mission</div> -->
                             <div class="txt">
                                 <p>Empowering<br />Creative Freedom</p><em>With limitless imagination and creative
                                     excellence,<br /> we lead the global K-Drama <br />universe and shape the future of
