--- a/List of works_lee.html
+++ b/List of works_lee.html
@@ -160,7 +160,32 @@
         <p>Marry My Husband</p>
       </div>
     </div> -->
-
+    <section class="last-section">
+      <h2>A NEW STORY BEGINS</h2>
+      <div class="slide inner">
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/Queen of Tears.webp"
+                  alt=""><span>Queen of
+                  Tears</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/The Glory4.jpg" alt=""><span>The
+                  Glory</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/Marry My Husband.jpg"
+                  alt=""><span>Marry My Husband</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/TyphoonFamily.webp"
+                  alt=""><span>Typhoon Family</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/TheUncannyCounter2.webp"
+                  alt=""><span>The Uncanny Counter</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/ThePlayer2.webp" alt=""><span>Queen of
+                  Tears</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/Gyeongseong Creature.webp"
+                  alt=""><span>Gyeongseong Creature</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/WhentheStars Gossip3.webp"
+                  alt=""><span>When the Stars Gossip</span></a></div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section class="onAir-section">
       <h2 class="on-alr">ON - AIR</h2>
@@ -171,8 +196,10 @@
         <button class="fin">FIN</button>
         <select class="Filter">
           <option value="romance">ROMANCE</option>
-          <option value="romance2">ROMANCE2</option>
-          <option value="romance3">ROMANCE3</option>
+          <option value="action">ACTION</option>
+          <option value="comedy">COMEDY</option>
+          <option value="history">HISTORY</option>
+          <option value="medicine">MEDICINE</option>
         </select>
       </div>
 
@@ -319,7 +346,7 @@
       </div>
     </section>
 
-    <section class="last-section">
+    <!--     <section class="last-section">
       <h2>A NEW STORY BEGINS</h2>
       <div class="slide inner">
         <div class="swiper">
@@ -343,7 +370,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <footer class="footer">
       <div class="footer_inner">
