ci 섹션 버튼 추가

--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -203,6 +203,8 @@
                             <em><b>DRAGON</b> : Universal Symbol of Imagination and Creativity</em>
                         </div>
                     </div>
+                    <a href="#"><button type="button">CI Files and Guidelines<i
+                                class="fa-solid fa-download"></i></button></a>
                 </div>
             </section>
             <section class="history">
@@ -1242,7 +1244,7 @@
                                         <li class="family_site_btn_wrap">
                                             <button type="button" class="family_site_btn">
                                                 <span>Family Site</span>
-                                                <img src="asset/up.svg" alt="arrow" class="family_site_arrow">
+                                                <img src="../asset/up.svg" alt="arrow" class="family_site_arrow">
                                             </button>
                                         </li>
                                     </ul><!-- //.family_site_list -->
@@ -1261,13 +1263,13 @@
 
                         <div class="footer_sns">
                             <a href="#" class="sns_link" aria-label="Facebook">
-                                <img src="asset/facebook.svg" alt="Facebook">
+                                <img src="../asset/facebook.svg" alt="Facebook">
                             </a>
                             <a href="#" class="sns_link" aria-label="YouTube">
-                                <img src="asset/youtube.svg" alt="YouTube">
+                                <img src="../asset/youtube.svg" alt="YouTube">
                             </a>
                             <a href="#" class="sns_link" aria-label="Instagram">
-                                <img src="asset/Instagram.svg" alt="Instagram">
+                                <img src="../asset/Instagram.svg" alt="Instagram">
                             </a>
                         </div><!-- //.footer_sns -->
                     </div><!-- //.footer_brand -->
