버튼 경로 설정

--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -203,7 +203,8 @@
                             <em><b>DRAGON</b> : Universal Symbol of Imagination and Creativity</em>
                         </div>
                     </div>
-                    <a href="#"><button type="button">CI Files and Guidelines<i
+                    <a href="https://web-cf-image.cjenm.com/public/sdragon/Studio Dragon CI-Guideline
+                        (KOR).zip"><button type="button">CI Files and Guidelines<i
                                 class="fa-solid fa-download"></i></button></a>
                 </div>
             </section>
