히스토리 수정

--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -259,7 +259,7 @@
                                     Direction" and "Best Original Production by a Streamer" categories at the Asian
                                     Academy Creative Awards (AACA).</em>
                             </li>
-                            <li>
+                            <li class="swiper-slide">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
                                     fill="none">
                                     <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
@@ -270,7 +270,7 @@
                                     "Queen of Tears" wins 'Best Scriptwriting' at the Asian Television Awards (ATA).
                                 </em>
                             </li>
-                            <li>
+                            <li class="swiper-slide">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
                                     fill="none">
                                     <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
@@ -280,7 +280,7 @@
                                 <em>Achieves an A grade in the ESG evaluation from the Korea
                                     ESG Standards Institute.</em>
                             </li>
-                            <li><!-- 눈물의 여왕 -->
+                            <li class="swiper-slide"><!-- 눈물의 여왕 -->
                                 <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
                                     fill="none">
                                     <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
